# inawo

./: .gitignore  pyproject.toml
fixtures/: inawo.csv
src/: README.md  main.py
src/local_csv/: extract.py  transform.py  transform_test.py
